--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "npm start",
+    "dev:backend": "cd ../backend && python start.py",
+    "dev:all": "concurrently \"npm run dev:backend\" \"npm run dev\""
   },
   "eslintConfig": {
     "extends": [
